Updated 12Q based on the discussion with my mentor.

--- a/unit_8/Unit_8_Case_Study.ipynb
+++ b/unit_8/Unit_8_Case_Study.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "q7 = '''\n",
     "    SELECT DISTINCT\n",
-    "      CONCAT(m.firstname, ' ', m.surname) AS member_name,\n",
+    "      m.surname||' '||m.firstname AS member_name,\n",
     "      f.name AS court_name\n",
     "    FROM Bookings AS b\n",
     "        LEFT JOIN (SELECT facid, name FROM Facilities) AS f\n",
@@ -108,7 +108,7 @@
     "q8 = '''\n",
     "    SELECT\n",
     "        f.name AS facility_name,\n",
-    "        CONCAT(m.firstname, ' ', m.surname) AS member_name,\n",
+    "        m.surname||' '||m.firstname AS member_name,\n",
     "        (CASE WHEN b.memid = 0 THEN f.guestcost\n",
     "            ELSE f.membercost END) * b.slots AS cost\n",
     "    FROM Bookings AS b\n",
@@ -291,106 +291,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is no facility that is used only by member.\n",
-      "\n",
-      "Q12b: list the facilities with their usage by member\n",
-      "facility_name   | bookid          | facid           | memid           | starttime       | slots           | \n",
-      "-----------------------------------------------------------------------------------------------------------\n",
-      "Table Tennis    |               0 |               3 |               1 | 2012-07-03 11:00:00 |               2 | \n",
-      "Massage Room 1  |               1 |               4 |               1 | 2012-07-03 08:00:00 |               2 | \n",
-      "Snooker Table   |               3 |               7 |               1 | 2012-07-03 19:00:00 |               2 | \n",
-      "\n",
       "Q12c: list the facilities usage by member\n",
-      "facility_name   | count           | \n",
-      "-----------------------------------\n",
-      "Badminton Court |             344 | \n",
-      "Massage Room 1  |             421 | \n",
-      "Massage Room 2  |              27 | \n",
-      "Pool Table      |             783 | \n",
-      "Snooker Table   |             421 | \n",
-      "Squash Court    |             195 | \n",
-      "Table Tennis    |             385 | \n",
-      "Tennis Court 1  |             308 | \n",
-      "Tennis Court 2  |             276 | \n"
+      "facility_name           | member_name             | count                   | \n",
+      "-----------------------------------------------------------------------------\n",
+      "Badminton Court         | Bader Florence          |                       9 | \n",
+      "Badminton Court         | Baker Anne              |                      10 | \n",
+      "Badminton Court         | Baker Timothy           |                       7 | \n",
+      "Badminton Court         | Boothe Tim              |                      12 | \n",
+      "Badminton Court         | Butters Gerald          |                      20 | \n",
+      "Badminton Court         | Crumpet Erica           |                       2 | \n",
+      "Badminton Court         | Dare Nancy              |                      10 | \n",
+      "Badminton Court         | Farrell Jemima          |                       7 | \n",
+      "Badminton Court         | Hunt John               |                       2 | \n",
+      "Badminton Court         | Jones David             |                       8 | \n",
+      "Badminton Court         | Jones Douglas           |                       2 | \n",
+      "Badminton Court         | Mackenzie Anna          |                      30 | \n",
+      "Badminton Court         | Owen Charles            |                       6 | \n",
+      "Badminton Court         | Pinker David            |                       7 | \n",
+      "Badminton Court         | Purview Millicent       |                       2 | \n",
+      "Badminton Court         | Rownam Tim              |                       4 | \n",
+      "Badminton Court         | Sarwin Ramnaresh        |                       7 | \n",
+      "Badminton Court         | Smith Darren            |                     132 | \n",
+      "Badminton Court         | Smith Jack              |                      12 | \n",
+      "Badminton Court         | Smith Tracy             |                      32 | \n"
      ]
     }
    ],
    "source": [
     "# Q12: Find the facilities with their usage by member, but not guests */\n",
     "q12 = '''\n",
-    "    WITH by_member AS (\n",
-    "        SELECT facid\n",
-    "        FROM Bookings\n",
-    "        WHERE memid != 0\n",
-    "    ),\n",
-    "    by_guest AS (\n",
-    "        SELECT facid\n",
-    "        FROM Bookings\n",
-    "        WHERE memid = 0\n",
-    "    )\n",
-    "    SELECT f.name AS facility_name\n",
-    "    FROM Facilities AS f\n",
-    "    WHERE f.facid NOT IN by_guest\n",
-    "        AND f.facid IN by_member;\n",
-    "'''\n",
-    "\n",
-    "res12 = con.execute(q12)\n",
-    "if not res12.fetchall():\n",
-    "    print('There is no facility that is used only by member.\\n')\n",
-    "\n",
-    "    \n",
-    "# Did you mean 'list the facilities with their usage by member?'\n",
-    "q12b = '''\n",
     "    SELECT\n",
     "        f.name AS facility_name,\n",
-    "        b.*\n",
-    "    FROM Bookings AS b\n",
-    "        LEFT JOIN Facilities AS f USING(facid)\n",
-    "    WHERE b.memid != 0;\n",
-    "'''\n",
-    "res12b = con.execute(q12b)\n",
-    "keys12b = res12b.keys()\n",
-    "res12b = res12b.fetchmany(3)\n",
-    "\n",
-    "print('Q12b: list the facilities with their usage by member')\n",
-    "for k in keys12b: \n",
-    "    print(f'{k:15} | ', end='')\n",
-    "\n",
-    "print()\n",
-    "print('-' * (18*len(keys12b)-1))\n",
-    "\n",
-    "for row in res12b:\n",
-    "    for c in row:\n",
-    "        print(f'{c:15} | ', end='')\n",
-    "    print()\n",
-    "print()\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Or did you mean 'list the facilities usage by member?'\n",
-    "q12c = '''\n",
-    "    SELECT\n",
-    "        f.name AS facility_name,\n",
+    "        m.surname||' '||m.firstname AS member_name,\n",
     "        COUNT(*) AS count\n",
     "    FROM Bookings AS b\n",
-    "        LEFT JOIN Facilities AS f USING(facid)\n",
+    "        INNER JOIN Facilities AS f USING(facid)\n",
+    "        INNER JOIN Members AS m USING(memid)\n",
     "    WHERE b.memid != 0\n",
-    "    GROUP BY 1;\n",
+    "    GROUP BY 1, 2\n",
+    "    ORDER BU 1, 2;\n",
     "'''\n",
-    "res12c = con.execute(q12c)\n",
-    "keys12c = res12c.keys()\n",
-    "res12c = res12c.fetchall()\n",
+    "res12 = con.execute(q12)\n",
+    "keys12 = res12.keys()\n",
+    "res12 = res12.fetchmany(20)  # Note I fetched only 20 for readability of this notebook.\n",
     "\n",
     "print('Q12c: list the facilities usage by member')\n",
-    "for k in keys12c: \n",
-    "    print(f'{k:15} | ', end='')\n",
+    "for k in keys12: \n",
+    "    print(f'{k:23} | ', end='')\n",
     "\n",
     "print()\n",
-    "print('-' * (18*len(keys12c)-1))\n",
+    "print('-' * (26*len(keys12)-1))\n",
     "\n",
-    "for row in res12c:\n",
+    "for row in res12:\n",
     "    for c in row:\n",
-    "        print(f'{c:15} | ', end='')\n",
+    "        print(f'{c:23} | ', end='')\n",
     "    print()"
    ]
   },
