--- a/unit_11/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
+++ b/unit_11/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
    "metadata": {},
    "source": [
     "__A:__ We'll calculate a confidence interval of the average charge using t distribution, and see if 12,000 is included in the interval. \n",
-    "If included, we cannot deny the average charge has fallen below 12,000. \n",
+    "If included, we cannot deny the average charge has fallen below 12,000, but if not included, it's not statistically significant to say the average charge has fallen to that level. \n",
     "We use t distribution we do not know the standard deviation of the population under the assumption of the metaphorical population of charges."
    ]
   },
@@ -316,22 +316,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "12725.48718381623"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% conbfidence interval (one-sided) is above 12725.49.\n",
+      "As $12,000 is out of this interval, the chance to observe the value is less than 5%.\n",
+      "i.e. we can't say, with statistical significance, that the average charge has fallen to $12,000.\n"
+     ]
     }
    ],
    "source": [
-    "min_range"
+    "print(f'95% conbfidence interval (one-sided) is above {min_range:.2f}.')\n",
+    "print('As $12,000 is out of this interval, the chance to observe the value is less than 5%.')\n",
+    "print('i.e. we can\\'t say, with statistical significance, that the average charge has fallen to $12,000.')"
    ]
   },
   {
