Update according to the feedback from mentor

--- a/unit_14/14.5/gradient_boosting_case_study.ipynb
+++ b/unit_14/14.5/gradient_boosting_case_study.ipynb
@@ -846,27 +846,27 @@
      "text": [
       "Learning rate:  0.05\n",
       "Accuracy score (training): 0.822\n",
-      "Accuracy score (validation): 0.822\n",
+      "Accuracy score (validation): 0.816\n",
       "\n",
       "Learning rate:  0.1\n",
       "Accuracy score (training): 0.820\n",
-      "Accuracy score (validation): 0.820\n",
+      "Accuracy score (validation): 0.794\n",
       "\n",
       "Learning rate:  0.25\n",
       "Accuracy score (training): 0.829\n",
-      "Accuracy score (validation): 0.829\n",
+      "Accuracy score (validation): 0.807\n",
       "\n",
       "Learning rate:  0.5\n",
       "Accuracy score (training): 0.844\n",
-      "Accuracy score (validation): 0.844\n",
+      "Accuracy score (validation): 0.825\n",
       "\n",
       "Learning rate:  0.75\n",
       "Accuracy score (training): 0.849\n",
-      "Accuracy score (validation): 0.849\n",
+      "Accuracy score (validation): 0.816\n",
       "\n",
       "Learning rate:  1\n",
       "Accuracy score (training): 0.859\n",
-      "Accuracy score (validation): 0.859\n",
+      "Accuracy score (validation): 0.812\n",
       "\n",
       "0.8251121076233184\n"
      ]
@@ -911,10 +911,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>0.023911</td>\n",
-       "      <td>0.001480</td>\n",
-       "      <td>0.000568</td>\n",
-       "      <td>0.000008</td>\n",
+       "      <td>0.030835</td>\n",
+       "      <td>0.002991</td>\n",
+       "      <td>0.000748</td>\n",
+       "      <td>0.000044</td>\n",
        "      <td>0.1</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
@@ -928,10 +928,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.033133</td>\n",
-       "      <td>0.003089</td>\n",
-       "      <td>0.000873</td>\n",
-       "      <td>0.000378</td>\n",
+       "      <td>0.041816</td>\n",
+       "      <td>0.001772</td>\n",
+       "      <td>0.000860</td>\n",
+       "      <td>0.000189</td>\n",
        "      <td>0.05</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -945,10 +945,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>0.013564</td>\n",
-       "      <td>0.001904</td>\n",
-       "      <td>0.000758</td>\n",
-       "      <td>0.000218</td>\n",
+       "      <td>0.018685</td>\n",
+       "      <td>0.001717</td>\n",
+       "      <td>0.000768</td>\n",
+       "      <td>0.000173</td>\n",
        "      <td>0.1</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -962,10 +962,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>0.019598</td>\n",
-       "      <td>0.000567</td>\n",
-       "      <td>0.000614</td>\n",
-       "      <td>0.000083</td>\n",
+       "      <td>0.033349</td>\n",
+       "      <td>0.002521</td>\n",
+       "      <td>0.000728</td>\n",
+       "      <td>0.000075</td>\n",
        "      <td>0.1</td>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
@@ -979,10 +979,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.015629</td>\n",
-       "      <td>0.001028</td>\n",
-       "      <td>0.000549</td>\n",
-       "      <td>0.000032</td>\n",
+       "      <td>0.020902</td>\n",
+       "      <td>0.004010</td>\n",
+       "      <td>0.000778</td>\n",
+       "      <td>0.000153</td>\n",
        "      <td>0.05</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
@@ -1000,11 +1000,11 @@
       ],
       "text/plain": [
        "    mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "20       0.023911      0.001480         0.000568        0.000008   \n",
-       "7        0.033133      0.003089         0.000873        0.000378   \n",
-       "16       0.013564      0.001904         0.000758        0.000218   \n",
-       "18       0.019598      0.000567         0.000614        0.000083   \n",
-       "3        0.015629      0.001028         0.000549        0.000032   \n",
+       "20       0.030835      0.002991         0.000748        0.000044   \n",
+       "7        0.041816      0.001772         0.000860        0.000189   \n",
+       "16       0.018685      0.001717         0.000768        0.000173   \n",
+       "18       0.033349      0.002521         0.000728        0.000075   \n",
+       "3        0.020902      0.004010         0.000778        0.000153   \n",
        "\n",
        "   param_learning_rate param_max_depth param_max_features  \\\n",
        "20                 0.1               5                  5   \n",
@@ -1051,13 +1051,12 @@
     "    gb.fit(X_train, y_train)\n",
     "    print(\"Learning rate: \", learning_rate)\n",
     "    print(\"Accuracy score (training): {0:.3f}\".format(gb.score(X_train, y_train)))\n",
-    "    print(\"Accuracy score (validation): {0:.3f}\".format(gb.score(X_train, y_train)))\n",
+    "    print(\"Accuracy score (validation): {0:.3f}\".format(gb.score(X_test, y_test)))\n",
     "    print()\n",
     "\n",
     "params = {'learning_rate': learning_rates,\n",
     "          'max_depth': [2, 3, 5, None],\n",
-    "          'max_features': [2, 3, 5] \n",
-    "         }\n",
+    "          'max_features': [2, 3, 5]}\n",
     "gb = GradientBoostingClassifier(n_estimators=20, random_state=0)\n",
     "cv = GridSearchCV(gb, params, cv=3)\n",
     "cv.fit(X_train, y_train)\n",
